<resources>
    <string name="app_name">Connect</string>
    <string name="reset_password">Reset Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="tnc">I accept all the Terms and Conditions</string>
    <string name="address">Address</string>
    <string name="country_of_residence">Country Of Residence</string>
    <string name="comment_here">Comment here!</string>
    <string name="change_password">Change Password</string>
    <string name="user_id">User ID</string>
    <string name="reg_success_msg">User Successfully Registered!</string>
    <string name="reg_failed_msg">User Registration Failed, try again later</string>
    <string name="please_wait_we_are_registering_you_to_our_service">Please Wait we are registering you to our service</string>
    <string name="back_to_login">Back to login</string>
    <string name="india">India</string>
    <string name="post">Post</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="john_doe">John Doe</string>
    <string name="accept_request">Accept Request</string>
    <string name="reject_request">Reject Request</string>
    <string name="please_wait_we_are_uploading_your_post">Please Wait We are Uploading your Post!</string>
    <string name="back_home">Back Home</string>
</resources>